# docs/swagger.json
@@ -136,7 +136,7 @@
                 "tags": [
                     "public"
                 ],
-                "summary": "check health",
+                "summary": "get all sections",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -145,6 +145,34 @@
                             "items": {
                                 "$ref": "#/definitions/model.Language"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/version": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "public"
+                ],
+                "summary": "get version",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Version"
                         }
                     },
                     "500": {
@@ -211,6 +239,14 @@
                 },
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "model.Version": {
+            "type": "object",
+            "properties": {
+                "version": {
+                    "type": "integer"
                 }
             }
         }
